mute joml logs